--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -7,7 +7,19 @@ nav {
 	&.opaque{
 		background: rgba(255, 255, 255, .3);
 	}
-
+	&.even {
+		ul {
+			text-align: justify;
+			li {
+				display: inline-block;
+			}
+		}
+		ul:after {
+			content: '';
+		  width: 100%; /* Ensures justification for single lines */
+		  display: inline-block;
+		}
+	}
 	/*set up for a sticky behavior*/
 	&.sticky {
 		position: fixed;
@@ -19,6 +31,9 @@ nav {
 	a {
 		font-family: 'Quicksand', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 		color: white;
+		position: relative;
+		display: inline-block;
+		text-align: center;
 	}
 	a:hover {
 		color: #89bdd3 !important;
@@ -33,22 +48,9 @@ nav {
 			display: inline;
 		}
 	}
-}
-
-/* Thanks Codrops */
-.dot-nav ul {
-	position: relative;
-	display: inline-block;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	cursor: default;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+	.nav-items {
+		margin: 1rem 2rem;
+	}
 }
 
 .dot-nav li {
@@ -61,52 +63,58 @@ nav {
 	cursor: pointer;
 }
 
-.dot-nav li a {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+.dot-nav li .dot {
+	position: absolute;
+	top: 2rem;
+	left: 50%;
+	margin-left: -5px;
+	width: 1rem;
+	height: 1rem;
 	outline: none;
 	border-radius: 50%;
-	background-color: #fff;
+	background-color: #c44d48;
 	background-color: rgba(255, 255, 255, 0.3);
-	text-indent: -999em; 
 	cursor: pointer;
-	position: absolute;
 }
 
-.dot-nav li a:focus {
+.dot-nav li .dot:focus {
 	outline: none;
 }
 
-.dot-nav--switch li::after {
+.dot-nav--switch li {
+	width: 1rem;
+	height: 1rem;
+}
+
+.dot-nav--switch li a::after {
 	content: '';
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	top: 2rem;
+	left: 50%;
+	margin-left: -5px;
+	width: 1rem;
+	height: 1rem;
 	visibility: hidden;
 	opacity: 0;
-	left: 0;
 	background-color: #9ad3de;
 	border-radius: 50%;
 	-webkit-transform: translateY(-200%);
 	transform: translateY(-200%);
-	-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease, visibility 0s 0.5s;
-	transition: transform 0.5s ease, opacity 0.5s ease, visibility 0s 0.5s;
+	-webkit-transition: -webkit-transform 0.3s ease, opacity 0.3s ease, visibility 0s 0.3s;
+	transition: transform 0.3s ease, opacity 0.3s ease, visibility 0s 0.3s;
 }
-
-.dot-nav--switch li a {
+.dot-nav--switch li .dot {
 	-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
 	transition: transform 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
 }
 
-.dot-nav--switch li:hover a,
-.dot-nav--switch li a:focus,
-.dot-nav--switch li.current a {
+.dot-nav--switch li:hover .dot,
+.dot-nav--switch li .dot:focus,
+.dot-nav--switch li.current .dot {
 	background-color: #fff;
 }
 
-.dot-nav--switch li.current::after {
+.dot-nav--switch li.current a::after {
 	opacity: 1;
 	visibility: visible;
 	-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
@@ -115,9 +123,8 @@ nav {
 	transform: translateY(0%);
 }
 
-.dot-nav--switch li.current a {
+.dot-nav--switch li.current .dot {
 	opacity: 0;
 	-webkit-transform: translateY(200%);
 	transform: translateY(200%);
 }
-
