--- a/dev/scss/components/_section.scss
+++ b/dev/scss/components/_section.scss
@@ -1,5 +1,11 @@
+.section-padding {
+	margin: 1rem 2rem;
+	padding: 1rem;
+}
+
 .bio-img { 
 	border-radius: 5px;
   height: 30vh;
   margin: 1rem;
 }
+
