Some fun fade in and fade out for mobile styles. Will also have to reconsider resize events.

--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -147,3 +147,9 @@ nav {
 	-webkit-transform: translateY(200%);
 	transform: translateY(200%);
 }
+
+@media all and (max-width: 640px) {
+  nav {
+  	justify-content: center !important;
+  }
+}
