--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -1,6 +1,6 @@
-@import 'views/home';
 @import 'components/hero';
 @import 'components/footer';
 @import 'components/navigation';
 @import 'components/global';
 @import 'components/section';
+@import 'components/layout';
