--- a/dev/scss/components/_global.scss
+++ b/dev/scss/components/_global.scss
@@ -1,9 +1,28 @@
+
 header {
 	margin-bottom: 1rem;
 }
+
 body {
 	overflow-x: hidden;
     background-color: #f3f5f8;
+    font-family: 'Raleway', 'Open Sans', sans-serif;
+}
+
+h1 {
+    font-weight: 300;
+    font-size: 2em;
+    line-height: 1;
+}
+
+h2 {
+    font-weight: 600;
+    font-size: 1.3em;
+}
+
+h3 {
+    font-weight: 600;
+    font-size: 1em;
 }
 
 a, a:active, a:focus {
