Some portfolio styles cleanup.

--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -53,7 +53,7 @@
 		text-decoration: none;
 
 		&:hover {
-			color: #89bdd3 !important;
+			color: #89bdd3;
 		}
 
 		&:after {
@@ -119,7 +119,6 @@
 		height: 1rem;
 		outline: none;
 		border-radius: 50%;
-		background-color: #c44d48;
 		background-color: rgba(255, 255, 255, 0.3);
 		cursor: pointer;
 		-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
@@ -136,80 +135,6 @@
 	}
 
 }
-
-/*.dot-nav li {
-	position: relative;
-	margin: 0 2rem;
-	width: 1rem;
-	height: 1rem;
-	cursor: pointer;
-}
-
-.dot-nav li .dot {
-	position: absolute;
-	top: 2rem;
-	left: 50%;
-	margin-left: -5px;
-	width: 1rem;
-	height: 1rem;
-	outline: none;
-	border-radius: 50%;
-	background-color: #c44d48;
-	background-color: rgba(255, 255, 255, 0.3);
-	cursor: pointer;
-}
-
-.dot-nav li .dot:focus {
-	outline: none;
-}*/
-/*
-.dot-nav--switch li {
-	width: 1rem;
-	height: 1rem;
-}
-*/
-/*.dot-nav--switch li a::after {
-	content: '';
-	position: absolute;
-	top: 2rem;
-	left: 50%;
-	margin-left: -5px;
-	width: 1rem;
-	height: 1rem;
-	visibility: hidden;
-	opacity: 0;
-	background-color: #9ad3de;
-	border-radius: 50%;
-	-webkit-transform: translateY(-200%);
-	transform: translateY(-200%);
-	-webkit-transition: -webkit-transform 0.3s ease, opacity 0.3s ease, visibility 0s 0.3s;
-	transition: transform 0.3s ease, opacity 0.3s ease, visibility 0s 0.3s;
-}
-.dot-nav--switch li .dot {
-	-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
-	transition: transform 0.5s ease, opacity 0.5s ease, background-color 0.5s ease;
-}*/
-/*
-.dot-nav--switch li:hover .dot,
-.dot-nav--switch li .dot:focus,
-.dot-nav--switch li.current .dot {
-	background-color: #fff;
-}
-
-.dot-nav--switch li.current a::after {
-	opacity: 1;
-	visibility: visible;
-	-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
-	transition: transform 0.5s ease, opacity 0.5s ease;
-	-webkit-transform: translateY(0%);
-	transform: translateY(0%);
-}
-
-.dot-nav--switch li.current .dot {
-	opacity: 0;
-	-webkit-transform: translateY(200%);
-	transform: translateY(200%);
-}*/
 
 @media all and (max-width: 640px) {
   nav {
