--- a/dev/scss/components/_layout.scss
+++ b/dev/scss/components/_layout.scss
@@ -13,6 +13,7 @@ body {
     margin: 0;
     padding: 0;
 
+    /* parent behaviors */
     &__row {
         display: flex;
         flex: 1;
@@ -25,6 +26,23 @@ body {
         flex-direction: column;
     }
 
+    &--fs {
+        align-items: flex-start;
+    }
+
+    &--fe {
+        align-items: flex-end;
+    }
+
+    &--center {
+        align-items: center;
+    }
+
+    &--sb {
+        justify-content: space-between;
+    }
+
+    /* child behaviors */
     &__block {
         display: block;
     }
@@ -40,15 +58,5 @@ body {
 
     &--shrink {
         flex: 0 1 auto;
-    }
-
-    &--fs {
-        align-items: flex-start;
-    }
-    &--fe {
-        align-items: flex-end;
-    }
-    &--center {
-        align-items: center;
     }
 }
